# AuditorAI

./: .replit  README.md  database.py  main.py  pyproject.toml  requirements.txt
models/: legal_analyzer.py
static/css/: tailwind.min.css
static/js/: app.js
templates/: api_docs.html  index.html
utils/: text_processor.py
