[tool.poetry]
name = "repl-nix-legalauditorai"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
transformers = "^4.44.2"
spacy = "^3.7.6"
torch = "^2.4.1"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.34"
werkzeug = "^3.0.4"
blinker = "1.6.2"
flask-cors = "^5.0.0"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
